--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <!-- Layout principale -->
+    <!-- Layout principale ciso -->
     <div class="layout" id="main-layout">
         <!-- Side Menu -->
         <div class="side-bar">
