--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- Splash Screen sis -->
+    <!-- Splash Screen -->
     <div class="splash-screen" id="splash">
         <div class="splash-content">
             <h1>IL CORPO UMANO</h1>
