--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
                         <a href="Sistema Nervoso/Neuroni.html" target="content-frame" class="sub-item">Neuroni</a>
                     </div>
                 </div>
-                <div class="item"><a href="#">Apparato 3</a></div>
+                <div class="item">
+                    <a class="sub-btn">Apparato Respiratorio<i class="fas fa-angle-right dropdown"></i></a>
+                    <div class="sub-menu">
+                        <a href="Respiratorio/Introduzione.html" target="content-frame" class="sub-item">Introduzione</a>
+                        <a href="Respiratorio/Respirazione.html" target="content-frame" class="sub-item">La Respirazione</a>
+                        <a href="Respiratorio/Apparato_respiratorio.html" target="content-frame" class="sub-item">Apparato Respiratorio</a>
+                        <a href="Respiratorio/Albero_bronchiale.html" target="content-frame" class="sub-item">Albero Bronchiale</a>
+                        <a href="Respiratorio/Fasi_respirazione.html" target="content-frame" class="sub-item">Fasi Respirazione</a>
+                    </div>
+                </div>
                 <div class="item"><a href="quiz.html" target="content-frame">Quiz</a></div>
                 <div class="item"><a href="#">Crediti</a></div>
                 <div class="item"><a href="#">Aiuto</a></div>
