--- a/Apparato_Digerente/slide_2.html
+++ b/Apparato_Digerente/slide_2.html
@@ -26,9 +26,10 @@
                 <li style="color:rgb(170, 35, 42);"><u>Fegato, Cistifellea e Pancreas;</u></li>
                 <li style="color:rgb(96, 151, 64);"><u>Intestino (Tenue e Crasso);</u></li>
             </ul>
+
             
             <p class="bottom_text">
-                Gli alimenti che noi mangiamo, prima di poter essere utilizzati dal nostro corpo 
+                Gli alimenti chee noi mangiamo, prima di poter essere utilizzati dal nostro corpo 
                 per produrre energia, devono essere trasformati in sostanze semplici, trasportabili 
                 dal sangue e assimilabili dalle cellule. Il processo che provvede a queste 
                 trasformazioni si chiama <strong>digestione</strong> a carico dell’
