--- a/Apparato_Digerente/slide_2.html
+++ b/Apparato_Digerente/slide_2.html
@@ -29,7 +29,7 @@
 
             
             <p class="bottom_text">
-                Gli alimenti chee noi mangiamo, prima di poter essere utilizzati dal nostro corpo 
+                Gli alimenti che noi mangiamo, prima di poter essere utilizzati dal nostro corpo 
                 per produrre energia, devono essere trasformati in sostanze semplici, trasportabili 
                 dal sangue e assimilabili dalle cellule. Il processo che provvede a queste 
                 trasformazioni si chiama <strong>digestione</strong> a carico dell’
