--- a/Apparato_Digerente/principale.html
+++ b/Apparato_Digerente/principale.html
@@ -4,7 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L'Apparato Digerente</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style_Dige.css">
+    <style>
+        /* SFONDO */
+        #body_Princ {
+            background-image: url(sfondoPrincipale.png);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+
+        #containerPri {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+            width: 100%;
+        }
+
+        #sp1 {
+            background-color: rgba(85, 195, 199, 0.664);
+            width: 400px;
+            height: 105px;
+            padding: 10px 0;
+            border-radius: 10px;
+            color: rgb(129, 71, 86);
+            text-align: center;
+        }
+
+        #txt1 {
+            margin-top: 20px; /* Instead of absolute positioning */
+            font-size: 18px;
+            color: rgb(99, 102, 104);
+        }
+
+
+
+    </style> 
 
 </head>
 <body id="body_Princ">
