--- a/Apparato_Digerente/slide_3.html
+++ b/Apparato_Digerente/slide_3.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>La Bocca e...</title>
+    <link rel="stylesheet" href="style_Dige.css">
+    <style>
+
+
+
+
+    </style>
+
 </head>
-<body>
+<body class="body_Slide">
+
+
+
+
+
+
+
     
+
+
+
+
+    <!-- Navigation Buttons -->
+    <div class="buttons">
+        <button class="button" onclick="location.href='slide_2.html';">
+            Indietro
+        </button>
+        <button class="button" onclick="location.href='slide_3.html';">
+            Avanti
+        </button>
+    </div>
+
+
 </body>
 </html>
