--- a/Apparato_Digerente/principale.html
+++ b/Apparato_Digerente/principale.html
@@ -25,18 +25,19 @@
 
         #sp1 {
             background-color: rgba(85, 195, 199, 0.664);
-            width: 400px;
-            height: 105px;
-            padding: 10px 0;
+            width: 700px;
+            height: 150px;
+            padding: 0px 20%;
             border-radius: 10px;
             color: rgb(129, 71, 86);
-            text-align: center;
+            
         }
 
         #txt1 {
             margin-top: 20px; /* Instead of absolute positioning */
-            font-size: 18px;
+            font-size: 1.6rem;
             color: rgb(99, 102, 104);
+            text-align: center;
         }
 
 
