--- a/Apparato_Digerente/slide_3.html
+++ b/Apparato_Digerente/slide_3.html
@@ -29,7 +29,7 @@
     <!-- Navigation Buttons -->
     <div class="buttons">
         <button class="button" onclick="location.href='slide_2.html';">
-            Indietro
+            Indietr
         </button>
         <button class="button" onclick="location.href='slide_3.html';">
             Avanti
