--- a/Apparato_Digerente/slide_3.html
+++ b/Apparato_Digerente/slide_3.html
@@ -6,14 +6,78 @@
     <title>La Bocca e...</title>
     <link rel="stylesheet" href="style_Dige.css">
     <style>
+        
 
 
+        #cloud{
+            flex: 1;
+            text-align: justify;
+            background-color: #f0ffff;
+            border: 3px solid #4f81bd;
+            height: 220px;
+            width: 480px;
+            border-radius: 100%;
+            padding: 30px;
+        }
+
+        #text{
+            
+            font-size: 1.4rem;
+            color: rgb(59, 184, 150);
+        }
+
+        #dentino{
+            width: 100%;       
+            min-width: 90%;
+        }
+
+        #dentino img {
+            width: 50%;
+            height: auto;
+            border-radius: 10px; 
+        }
+
+
+
+
+
+
+
+        #arrow1{
+            transform-origin: center;
+        }
+
+
+        #arrow1{
+            position: relative;
+            bottom: 160px;
+            left: 240px;
+            transform: rotate(-25deg);
+        }
 
 
     </style>
 
 </head>
 <body class="body_Slide">
+
+    <div class="slide_container">
+
+        <h3 style="color: rgb(47, 139, 192);">La Bocca e la Cavità Orale</h3>
+
+        <div id="cloud">
+            <p id="text">La <bold><u>digestione</u></bold> inizia nella bocca, dove i denti masticano cibo e saliva, prodotta dalle ghiandole salivari
+                Inizia la digestione chimica degli amidi.
+            </p>
+            <div id="dentino">
+                <img src="image2_3.png" alt="Dentinooo il nosto amico dente">
+            </div>
+
+        </div>
+
+    </div>
+
+
 
 
 
