--- a/Apparato_Digerente/slide_4.html
+++ b/Apparato_Digerente/slide_4.html
@@ -36,7 +36,10 @@
             font-size: 1.1rem;
             text-shadow: black 2px 2px 3px;
         }
-        
+
+        ciao{
+            
+        }
 
         #image_container{
             transform: translateX(100px);
