--- a/Apparato_Digerente/slide_2.html
+++ b/Apparato_Digerente/slide_2.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style_Dige.css">
     <style>
 
+        #slide2_container{
+            position: relative;
+            width: 90%;
+            max-width: 1200px;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            gap: 10px;
+            bottom: 120px;
+            right: 170px;
+        }
+
         #Text2_section{
             flex: 1;
             min-width: 780px;
@@ -109,7 +121,7 @@
 </head>
 <body class="body_Slide">
 
-    <div class="slide_container">
+    <div id="slide2_container">
 
         <!-- Left Text Section -->
         <div id="Text2_section">
