--- a/Apparato_Digerente/slide_4.html
+++ b/Apparato_Digerente/slide_4.html
@@ -23,23 +23,18 @@
 
         #title{
             max-width: 500px;
-            border: 3px solid saddlebrown;
         }
 
         #text1, #text2 {
             max-width: 500px;
-            border: 3px solid saddlebrown;
             row-gap: 4px;
         }
 
         bold {
             font-size: 1.1rem;
-            text-shadow: black 2px 2px 3px;
+            text-shadow: black 1px 1px 1px;
         }
 
-        ciao{
-            
-        }
 
         #image_container{
             transform: translateX(100px);
@@ -50,6 +45,7 @@
         #image_container img {
             max-width: 500px;
             height: auto;
+            border: 2px solid rgb(0, 112, 192);
         }
 
 
