--- a/Apparato_Digerente/principale.html
+++ b/Apparato_Digerente/principale.html
@@ -58,10 +58,10 @@
 
 <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" style="visibility: hidden;">
+        <button class="button" style="visibility: hidden;" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='slide_2.html';">
+        <button class="button" onclick="location.href='slide_2.html';" target="content-frame">
             Avanti
         </button>
     </div>
