--- a/Apparato_Digerente/slide_3.html
+++ b/Apparato_Digerente/slide_3.html
@@ -145,10 +145,10 @@
 
     <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" onclick="location.href='slide_2.html';">
+        <button class="button" onclick="location.href='slide_2.html';" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='slide_4.html';">
+        <button class="button" onclick="location.href='slide_4.html';" target="content-frame">
             Avanti
         </button>
     </div>
