--- a/Apparato_Digerente/slide_2.html
+++ b/Apparato_Digerente/slide_2.html
@@ -175,10 +175,10 @@
 
 <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" onclick="location.href='principale.html';">
+        <button class="button" onclick="location.href='principale.html';" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='slide_3.html';">
+        <button class="button" onclick="location.href='slide_3.html';" target="content-frame">
             Avanti
         </button>
     </div>
