--- a/Apparato_Digerente/slide_4.html
+++ b/Apparato_Digerente/slide_4.html
@@ -84,10 +84,10 @@
 
     <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" onclick="location.href='slide_3.html';">
+        <button class="button" onclick="location.href='slide_3.html';" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='slide_5.html';">
+        <button class="button" onclick="location.href='slide_5.html';" target="content-frame">
             Avanti
         </button>
     </div>
