--- a/Apparato Circolatorio/introduzione2.html
+++ b/Apparato Circolatorio/introduzione2.html
@@ -105,13 +105,13 @@
 <body>
     <div class="content">
         <p>
-            Per funzionare ogni macchina, e quindi anche l’uomo, ha bisogno di carburante da cui riceve energia e ha bisogno di eliminare le sostanze di scarto. 
+            Per funzionare ogni macchina, e quindi anche l'uomo, ha bisogno di carburante da cui riceve energia e ha bisogno di eliminare le sostanze di scarto. 
             Ovviamente anche tutte le cellule del nostro organismo hanno bisogno di sostanze nutritive ed ossigeno e devono eliminare le sostanze di rifiuto. 
-            Tutto ciò è svolto dall’apparato circolatorio.
+            Tutto ciò è svolto dall'apparato circolatorio.
         </p>
         <br>
         <p>
-            L’apparato cardiocircolatorio è formato da:
+            L'apparato cardiocircolatorio è formato da:
         </p>
         <div class="image-row">
             <img src="sangue.png" alt="immagine sangue" class="sangue-image">
