--- a/Apparato Circolatorio/cuore.html
+++ b/Apparato Circolatorio/cuore.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Il Cuore</title>
     <style>
         body {
@@ -17,7 +18,7 @@
             align-items: center;
             justify-content: flex-start;
         }
-        .content{
+        #content{
             text-align: start;
             padding: 20px 20px 0px 20px;
             flex-direction: row;
@@ -92,7 +93,7 @@
     </style>
 </head>
 <body>
-    <div class="content">
+    <div id="content" class="slide_container_Dim">
         <div class="text">
             <p>
                 Organo fondamentale che fa circolare il sangue nei vasi. Esso scorre in due direzioni diverse e cioè dal cuore alla periferia nelle
