--- a/Apparato Circolatorio/introduzione1.html
+++ b/Apparato Circolatorio/introduzione1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Introduzione</title>
     <style>
         body {
@@ -17,7 +18,7 @@
             align-items: center;
             justify-content: flex-start;
         }
-        .container {
+        #container {
             position: relative;
             width: 100%;
             height: 100vh;
@@ -62,7 +63,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div id="container" class="slide_container_Dim">
         <div class="title">
             Il Sistema<br>
             Cardiocircolatorio
