--- a/Apparato Circolatorio/vasi_sanguigni.html
+++ b/Apparato Circolatorio/vasi_sanguigni.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>I Vasi Sanguigni</title>
     <style>
         body {
@@ -17,7 +18,7 @@
             align-items: center;
             justify-content: flex-start;
         }
-        .content {
+        #content {
             text-align: start;
             padding: 20px 20px 0px 20px;
             flex-direction: column;
@@ -111,7 +112,7 @@
     </style>
 </head>
 <body>
-    <div class="content">
+    <div id="content" class="slide_container_Dim">
         <div class="img_content">
             <div class="text_content">
                 <p>
