--- a/Apparato_Digerente/principale.html
+++ b/Apparato_Digerente/principale.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L'Apparato Digerente</title>
     <link rel="stylesheet" href="style_Dige.css">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <style>
         /* SFONDO */
         #body_Princ {
@@ -47,7 +48,7 @@
 </head>
 <body id="body_Princ">
 
-    <div id="containerPri">
+    <div id="containerPri" class="slide_container_Dim">
         <div id="sp1">
             <h1>L'Apparato Digerente</h1>
         </div>
