--- a/Apparato_Digerente/slide_2.html
+++ b/Apparato_Digerente/slide_2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduzione</title>
     <link rel="stylesheet" href="style_Dige.css">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <style>
 
         #slide2_container{
@@ -121,7 +122,7 @@
 </head>
 <body class="body_Slide">
 
-    <div id="slide2_container">
+    <div id="slide2_container" class="slide_container_Dim">
 
         <!-- Left Text Section -->
         <div id="Text2_section">
