--- a/Apparato_Digerente/slide_3.html
+++ b/Apparato_Digerente/slide_3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Bocca e...</title>
     <link rel="stylesheet" href="style_Dige.css">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <style>
 
         #slide3_container{
@@ -100,7 +101,7 @@
 </head>
 <body class="body_Slide">
 
-    <div id="slide3_container">
+    <div id="slide3_container" class="slide_container_Dim">
 
         <h3 id="title" style="color: #2f8bc0;">La Bocca e la Cavità Orale</h3>
 
