--- a/Apparato_Digerente/slide_4.html
+++ b/Apparato_Digerente/slide_4.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faringe ed Esofago</title>
     <link rel="stylesheet" href="style_Dige.css">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <style>
 
         #slide4_container{
@@ -56,7 +57,7 @@
 <body class="body_Slide">
 
 
-    <div id="slide4_container">
+    <div id="slide4_container" class="slide_container_Dim">
 
         
         <div id="text_container">
