--- a/Respiratorio/Albero_bronchiale.html
+++ b/Respiratorio/Albero_bronchiale.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Albero Bronchiale</title>
     <style>
         body {
@@ -14,7 +15,7 @@
             text-align: justify;
             position: relative; /* Necessario per il posizionamento assoluto dei tasti */
         }
-        .container {
+        #container {
             width: 80%;
             margin: auto;
         }
@@ -58,7 +59,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div id="container" class="slide_container_Dim">
         <p>Alla laringe segue la <span class="highlight-pink">trachea</span> un tubo flessibile, lungo 10-15 cm. E’ costituita da una ventina di anelli cartilaginei, ed è rivestita da ciglia e da cellule che producono muco.
             Il movimento delle ciglia favorisce l’eliminazione delle impurità dell’aria inspirata.</p>
         <br>
