--- a/Respiratorio/Apparato_respiratorio.html
+++ b/Respiratorio/Apparato_respiratorio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Apparato Respiratorio</title>
     <style>
         body {
@@ -14,7 +15,7 @@
             text-align: justify;
             position: relative; /* Necessario per il posizionamento assoluto dei tasti */
         }
-        .container {
+        #container {
             width: 80%;
             margin: auto;
         }
@@ -57,7 +58,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div id="container" class="slide_container_Dim">
         <p>Giunta nel <span class="highlight-red">naso</span> grazie ai <b>peli nasali</b> e al <b>muco</b> prodotto dalle cellule mucipare, l’aria viene filtrata e quindi purificata dalle impurità come il pulviscolo atmosferico,
            inoltre viene riscaldata e resa umida. Il naso è una prima protezione a tutto il sistema respiratorio, cosa che non avviene se l’aria entra dalla bocca.</p>
            <br>
