--- a/Respiratorio/Fasi_respirazione.html
+++ b/Respiratorio/Fasi_respirazione.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Respirazione</title>
     <style>
         body {
@@ -14,7 +15,7 @@
             text-align: justify;
             position: relative; /* Necessario per il posizionamento assoluto dei tasti */
         }
-        .container {
+        #container {
             width: 80%;
             margin: auto;
         }
@@ -58,7 +59,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div id="container" class="slide_container_Dim">
         <p>L’aria che respiriamo, quindi, giunge fino ai <span class="highlight-red">polmoni</span>, due organi elastici e spugnosi che però <u>non sono in grado di contrarsi da soli</u> perché non presentano fibre muscolari. 
            Sono racchiusi nella <b>cavità toracica</b>, della quale assumono la forma e sono separati dalla cavità addominale attraverso il <span class="highlight-blue">diaframma</span>.</p>
         <br>
