--- a/Respiratorio/Introduzione.html
+++ b/Respiratorio/Introduzione.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Apparato Respiratorio</title>
     <style>
         body {
@@ -61,15 +62,20 @@
     </style>
 </head>
 <body>
-    <div class="title">
-        Apparato Respiratorio
+
+    <div class="slide_container_Dim">
+        <div class="title">
+            Apparato Respiratorio
+        </div>
+        <div class="text">
+            L'apparato respiratorio è responsabile dello scambio di ossigeno e anidride carbonica, 
+            garantendo la corretta ossigenazione del sangue e il mantenimento dell'omeostasi.
+        </div>
     </div>
-    <div class="text">
-        L'apparato respiratorio è responsabile dello scambio di ossigeno e anidride carbonica, 
-        garantendo la corretta ossigenazione del sangue e il mantenimento dell'omeostasi.
-    </div>
+
     <div class="buttons">
         <button class="button" onclick="location.href='Respirazione.html';">Avanti</button>
     </div>
+
 </body>
 </html>
