--- a/Sistema Nervoso/Introduzione1.html
+++ b/Sistema Nervoso/Introduzione1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Introduzione</title>
     <style>
         body {
@@ -61,13 +62,20 @@
     </style>
 </head>
 <body>
-    <div class="title">
-        Il Sistema Nervoso
+
+    <div class="slide_container_Dim">
+
+        <div class="title">
+            Il Sistema Nervoso
+        </div>
+        <div class="text">
+            Il sistema nervoso è la nostra centrale di controllo: raccoglie le informazioni provenienti da tutto il corpo, 
+            le integra ed elabora, per restituire una risposta o un comando adeguato.
+        </div>
+
     </div>
-    <div class="text">
-        Il sistema nervoso è la nostra centrale di controllo: raccoglie le informazioni provenienti da tutto il corpo, 
-        le integra ed elabora, per restituire una risposta o un comando adeguato.
-    </div>
+    
+
     <div class="buttons">
         <button class="button" onclick="location.href='introduzione2.html';">Avanti</button>
     </div>
