--- a/Sistema Nervoso/Introduzione2.html
+++ b/Sistema Nervoso/Introduzione2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Sistema Nervoso</title>
     <style>
         body {
@@ -82,18 +83,24 @@
     </style>
 </head>
 <body>
-    <div class="text">
-        Questo sistema elabora risposte, a volte in maniera automatica, a volte con l’intervento della nostra volontà.<br>
-        Esso si occupa anche del coordinamento delle azioni, che avvengono all’interno del nostro organismo, 
-        come dormire o svegliarsi, respirare, parlare ecc.<br>
-        Questo perché esso coordina gli organi e ne regola l’attività sensoriale e motoria.
+
+    <div class="slide_container_Dim">
+
+        <div class="text">
+            Questo sistema elabora risposte, a volte in maniera automatica, a volte con l’intervento della nostra volontà.<br>
+            Esso si occupa anche del coordinamento delle azioni, che avvengono all’interno del nostro organismo, 
+            come dormire o svegliarsi, respirare, parlare ecc.<br>
+            Questo perché esso coordina gli organi e ne regola l’attività sensoriale e motoria.
+        </div>
+        <div class="division-text">Per poterlo descrivere meglio lo dobbiamo dividere in due parti</div>
+        <div class="image-container">
+            <div class="label snc">il sistema nervoso centrale<br>SNC</div>
+            <img src="Immagine1.png" alt="Sistema Nervoso">
+            <div class="label snp">sistema nervoso periferico<br>SNP</div>
+        </div>
+
     </div>
-    <div class="division-text">Per poterlo descrivere meglio lo dobbiamo dividere in due parti</div>
-    <div class="image-container">
-        <div class="label snc">il sistema nervoso centrale<br>SNC</div>
-        <img src="Immagine1.png" alt="Sistema Nervoso">
-        <div class="label snp">sistema nervoso periferico<br>SNP</div>
-    </div>
+
     <div class="buttons">
         <button class="button" onclick="location.href='Introduzione1.html';">Indietro</button>
         <button class="button" onclick="location.href='Introduzione3.html';">Avanti</button>
