--- a/Sistema Nervoso/SistemaNervosoPeriferico.html
+++ b/Sistema Nervoso/SistemaNervosoPeriferico.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Il Sistema Nervoso Periferico</title>
     <style>
         body {
@@ -14,7 +15,7 @@
             text-align: justify;
             position: relative; 
         }
-        .container {
+        #container {
             width: 80%;
             margin: auto;
         }
@@ -64,7 +65,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div id="container" class="slide_container_Dim">
         <h1>IL SISTEMA NERVOSO PERIFERICO</h1>
         <p>
             Il <strong>sistema nervoso periferico</strong> è la parte del sistema nervoso formata da nervi, 
