--- a/Sistema Nervoso/Encefalo.html
+++ b/Sistema Nervoso/Encefalo.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>L'Encefalo</title>
     <style>
         body {
@@ -14,7 +15,7 @@
             text-align: justify;
             position: relative; /* Necessario per il posizionamento assoluto dei tasti */
         }
-        .container {
+        #container {
             width: 80%;
             margin: auto;
         }
@@ -59,7 +60,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div id="container" class="slide_container_Dim">
         <h1>L'ENCEFALO</h1>
         <p>L’encefalo è la parte più complessa del sistema nervoso e comprende:
            <span class="highlight-pink">il cervello</span>, 
