--- a/Sistema Nervoso/Introduzione3.html
+++ b/Sistema Nervoso/Introduzione3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Sistema Nervoso Centrale</title>
     <style>
         body {
@@ -72,13 +73,17 @@
     </style>
 </head>
 <body>
-    <div class="text">
-        <strong>Il sistema nervoso centrale</strong> regola le interazioni con l’ambiente circostante.<br>
-        Esso è costituito dall’<span class="red">encefalo</span> (formato dal cervello, cervelletto e midollo allungato) e dal <span class="yellow">midollo spinale</span> contenuto nella colonna vertebrale.
+
+    <div class="slide_container_Dim">
+        <div class="text">
+            <strong>Il sistema nervoso centrale</strong> regola le interazioni con l’ambiente circostante.<br>
+            Esso è costituito dall’<span class="red">encefalo</span> (formato dal cervello, cervelletto e midollo allungato) e dal <span class="yellow">midollo spinale</span> contenuto nella colonna vertebrale.
+        </div>
+        <div class="image-container">
+            <img src="sistema.png" alt="Sistema Nervoso Centrale">
+        </div>
     </div>
-    <div class="image-container">
-        <img src="sistema.png" alt="Sistema Nervoso Centrale">
-    </div>
+
     <div class="buttons">
         <button class="button" onclick="location.href='Introduzione2.html';">Indietro</button>
         <button class="button" onclick="location.href='Encefalo.html';">Avanti</button>
