--- a/Sistema Nervoso/Neuroni.html
+++ b/Sistema Nervoso/Neuroni.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Neuroni e Trasmissione dell'Impulso</title>
     <style>
         body {
@@ -14,7 +15,7 @@
             text-align: justify;
             position: relative; 
         }
-        .container {
+        #container {
             width: 80%;
             margin: auto;
         }
@@ -60,7 +61,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div id="container" class="slide_container_Dim">
         <h1>I NEURONI E LA TRASMISSIONE DELL'IMPULSO</h1>
         <p>
             Il tessuto nervoso è costituito da una rete intricata di miliardi di cellule specializzate, 
