--- a/Sistema Nervoso/SistemaCompleto.html
+++ b/Sistema Nervoso/SistemaCompleto.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Il Sistema Nervoso</title>
     <style>
         body {
@@ -14,7 +15,7 @@
             text-align: justify;
             position: relative; 
         }
-        .container {
+        #container {
             width: 80%;
             margin: auto;
         }
@@ -59,7 +60,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div id="container" class="slide_container_Dim">
         <h1>IL SISTEMA NERVOSO</h1>
         <p style="text-align:center;">
             <strong>Ripetiamo bene...</strong>
