--- a/Apparato_Digerente/slide_5.html
+++ b/Apparato_Digerente/slide_5.html
@@ -6,6 +6,28 @@
     <title>Lo Stomaco</title>
     <link rel="stylesheet" href="style_Dige.css">
     <link rel="stylesheet" href="../slide_Dim.css">
+
+    <style>
+        
+        #slide5_container{
+            display: flex;
+            flex-direction: row;
+        }
+
+        #main_container{
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+        }
+
+        #title_Img{
+            display: flex;
+            flex-direction: row;
+        }
+
+
+    </style>
+
 </head>
 <body class="body_Slide">
 
@@ -14,12 +36,12 @@
 
             <div id="title_Img">
                 <img src="image5_1.png" alt="Stomachinoooo!!!!!">
-                <h3>Lo Stomaco</h3>
+                <h3 style="color: rgb(228, 108, 10);">Lo Stomaco</h3>
             </div>
 
             <div id="text5_1_container">
                 <p id="text1">
-                    Lo stomaco è un organo muscolare a forma di sacco, che mescola in continuazione il cibo (bolo) con i <bold style="color: rgb(146, 208, 80);">succhi gastrici</bold>, grazie ai <sub>muscoli involontari</sub> delle sue pareti.
+                    Lo stomaco è un organo muscolare a forma di sacco, che mescola in continuazione il cibo (bolo) con i <bold style="color: rgb(146, 208, 80);">succhi gastrici</bold>, grazie ai <u>muscoli involontari</u> delle sue pareti.
                 </p>
                 <br>
                 <p>
@@ -33,7 +55,7 @@
                 <p>
                     Dallo stomaco, il chimo passa nell'<bold style="color: rgb(112, 48, 160);">intestino</bold>, un tubo lungo e contorto, diviso in due parti:
                 </p>
-                <ul>
+                <ul id="list">
                     <li style="color: rgb(0, 0, 255);">l'intestino tenue; </li>
                     <li style="color: rgb(0, 0, 255);">E l'intestino crasso;</li>
                 </ul>
