--- a/Apparato_Digerente/slide_6.html
+++ b/Apparato_Digerente/slide_6.html
@@ -113,7 +113,7 @@
                     <img src="image6_2.png" alt="Intestinoooo!!">
                 </div>
                 <div id="cloud_cloud">
-                    <p>A questo punto, le sostanze nutritive sono trasformate in chilo alimentare, un liquido pronto per essere assorbito</p>
+                    <p>A questo punto, le sostanze nutritive sono trasformate in <bold style="color: rgb(255, 0, 0); font-size: larger;">chilo</bold> alimentare, un liquido pronto per essere assorbito</p>
                 </div>
             </div>
 
