--- a/Apparato_Digerente/slide_5.html
+++ b/Apparato_Digerente/slide_5.html
@@ -12,6 +12,7 @@
         #slide5_container{
             display: flex;
             flex-direction: row;
+            transform: translate(0, -3vh);
         }
 
         #main_container{
@@ -19,12 +20,52 @@
             flex-direction: column;
             align-items: start;
         }
-
+        
         #title_Img{
             display: flex;
             flex-direction: row;
         }
+        #title_Img h3{
+            width: 15vw;
+            height: fit-content;
+        }
+        #title_Img img{
+            width: 7vw;
+            height: fit-content;
+        }
 
+
+        #text5_1_container{
+            width: 35vw;
+            text-align: left;
+        }
+        #text5_1_container p{
+            font-size: 1.6rem;
+        }
+
+        #text5_2_container{
+            width: 30vw;
+            text-align: left;
+        }
+        #text5_2_container p{
+            font-size: 1.6rem;
+        }
+        #text5_2_container li{
+            font-size: 1.6rem;
+        }
+
+        #image_container{
+            transform: translate(0, 15vh);
+            width: fit-content;
+            height: fit-content;
+            border: 4px solid rgb(0, 132, 255);
+        }
+
+        #image_container img{
+            width: 43vw;
+            height: fit-content;
+        }
+        
 
     </style>
 
@@ -41,23 +82,23 @@
 
             <div id="text5_1_container">
                 <p id="text1">
-                    Lo stomaco è un organo muscolare a forma di sacco, che mescola in continuazione il cibo (bolo) con i <bold style="color: rgb(146, 208, 80);">succhi gastrici</bold>, grazie ai <u>muscoli involontari</u> delle sue pareti.
+                    Lo stomaco è un organo muscolare a forma di sacco, che mescola in continuazione il cibo (bolo) con i <bold style="color: rgb(114, 161, 62);">succhi gastrici</bold>, grazie ai <u>muscoli involontari</u> delle sue pareti.
                 </p>
                 <br>
                 <p>
-                    Questi potenti <bold style="color: rgb(146, 208, 80);">succhi gastrici (<tt style="color:rgb(64, 64, 64);">acidi ed enzimi</tt>)</bold>,
-                    prodotti dalle numerose ghiandole all'interno dello stomaco, trasformano il bolo in una poltiglia semi-liquida chiamata <bold style="color: rgb(112, 48, 160);">chimo</bold>.
+                    Questi potenti <bold style="color: rgb(113, 156, 66);">succhi gastrici (<tt style="color:rgb(105, 105, 105); font-size: larger;">acidi ed enzimi</tt>)</bold>,
+                    prodotti dalle numerose ghiandole all'interno dello stomaco, trasformano il bolo in una poltiglia semi-liquida chiamata <bold style="color: rgb(128, 63, 177);">chimo</bold>.
                 </p>
                 <br>
             </div>
 
             <div id="text5_2_container">
                 <p>
-                    Dallo stomaco, il chimo passa nell'<bold style="color: rgb(112, 48, 160);">intestino</bold>, un tubo lungo e contorto, diviso in due parti:
+                    Dallo stomaco, il chimo passa nell'<bold style="color: rgb(134, 74, 180);">intestino</bold>, un tubo lungo e contorto, diviso in due parti:
                 </p>
                 <ul id="list">
-                    <li style="color: rgb(0, 0, 255);">l'intestino tenue; </li>
-                    <li style="color: rgb(0, 0, 255);">E l'intestino crasso;</li>
+                    <li style="color: rgb(119, 0, 255);">l'intestino tenue; </li>
+                    <li style="color: rgb(119, 0, 255);">E l'intestino crasso;</li>
                 </ul>
             </div>
 
