--- a/Apparato_Digerente/slide_7.html
+++ b/Apparato_Digerente/slide_7.html
@@ -21,7 +21,7 @@
         }
 
         #row1 p{
-            width: 40%;
+            width: 40vw;
             font-size: 1.8rem;
             text-align: left;
             align-self: center;
@@ -30,7 +30,7 @@
         }
 
         #row1 img{
-            width: 35%;
+            width: 35vw;
         }
 
         #row2{
@@ -41,7 +41,7 @@
         }
 
         #row2 p{
-            width: 40%;
+            width: 40vw;
             font-size: 1.8rem;
             text-align: right;
             align-self: center;
@@ -49,7 +49,7 @@
         }
 
         #row2 img{
-            width: 35%;
+            width: 35vw;
         }
 
     </style>
@@ -59,7 +59,7 @@
     <div id="slide7_container">
 
         <div id="row1">
-            <p>I <bold style="color: rgb(99, 37, 35);">villi intestinali</bold> sono piccole estroflessioni dell'intestino tenue, che aumentano la superficie di assorbimento e permettono il passaggio dei nutrienti nel sangue poiché ricchi di vasi sanguigni.</p>
+            <p>I <bold style="color: rgb(128, 39, 36);">villi intestinali</bold> sono piccole estroflessioni dell'intestino tenue, che aumentano la superficie di assorbimento e permettono il passaggio dei nutrienti nel sangue poiché ricchi di vasi sanguigni.</p>
             <img src="image7_1.png">
 
         </div>
