--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
                         <a href="Respiratorio/Fasi_respirazione.html" target="content-frame" class="sub-item">Fasi Respirazione</a>
                     </div>
                 </div>
+                <div class="item">
+                    <a class="sub-btn">Apparato Digerente<i class="fas fa-angle-right dropdown"></i></a>
+                    <div class="sub-menu">
+                        <a href="Apparato_Digerente/principale.html" target="content-frame" class="sub-item">Inizio</a>
+                        <a href="Apparato_Digerente/slide_2.html" target="content-frame" class="sub-item">Introduzione</a>
+                        <a href="Apparato_Digerente/slide_3.html" target="content-frame" class="sub-item">La Bocca e la Cavità Orale</a>
+                        <a href="Apparato_Digerente/slide_4.html" target="content-frame" class="sub-item">Faringe ed Esofago</a>
+                        <a href="Apparato_Digerente/slide_5.html" target="content-frame" class="sub-item">Lo Stomaco</a>
+                        <a href="Apparato_Digerente/slide_6.html" target="content-frame" class="sub-item">L'Intestino Tenue 1</a>
+                        <a href="Apparato_Digerente/slide_7.html" target="content-frame" class="sub-item">L'Intestino Tenue 2</a>
+                        <a href="Apparato_Digerente/slide_8.html" target="content-frame" class="sub-item">L'Intestino Crasso</a>
+                        <a href="Apparato_Digerente/slide_9.html" target="content-frame" class="sub-item">Fegato, Cistifelea e Pancreas</a>
+                    </div>
+
+                </div>
                 <div class="item"><a href="quiz.html" target="content-frame">Quiz</a></div>
                 <div class="item"><a href="#">Crediti</a></div>
                 <div class="item"><a href="#">Aiuto</a></div>
