--- a/Apparato_Digerente/slide_8.html
+++ b/Apparato_Digerente/slide_8.html
@@ -6,8 +6,59 @@
     <title>L'Intestino Crasso</title>
     <link rel="stylesheet" href="style_Dige.css">
     <link rel="stylesheet" href="../slide_Dim.css">
+    <style>
+        #slide8_container{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;    
+        }
+
+        #column1{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+        #column1 p{
+            font-size: 2.7rem;
+            text-align: left;
+            
+            width: 30vw;
+            height: 50vh;
+            padding: 10%;
+        }
+
+        #column2{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        #column2 img{
+            width: 20vw;
+            border: 5px solid rgb(0, 102, 255);
+        }
+
+    </style>
 </head>
 <body class="body_Slide">
+
+    <div id="slide8_container">
+
+        <div id="column1">
+            <h3 style="color: rgb(112, 48, 160);">L'intestino Crasso</h3>
+            <p>Le sostanze di rifiuto, che non sono state digerite, entrano nell'<bold style="color: blue;">intestino crasso</bold>. <br>
+                Qui parte dell'acqua viene riassorbita e restituita alle cellule, mentre i residui del cibo sono espulsi, attraverso l'<bold style="color: blue;">intestino retto</bold> e l'<bold style="color: rgb(255, 0, 0);">ano</bold>, sotto forma di feci.</p>
+        </div>
+
+        <div id="column2">
+            <img src="image8_1.png" alt="immagine Intestino tenue">
+            <img src="image8_2.png" alt="immagine Intestino crasso">
+        </div>
+
+
+
+
+    </div>
 
 
 
