--- a/Apparato_Digerente/slide_9.html
+++ b/Apparato_Digerente/slide_9.html
@@ -57,7 +57,8 @@
             text-align: left;
         }
         #text1_cloud2{
-            border: 2px solid;
+            background-color: rgba(209, 185, 111, 0.808);
+            border: 2px solid  rgb(255, 255, 0);
             display: flex;
             flex-direction: column;
             width: 40vw;
@@ -69,7 +70,8 @@
         }
 
         #text2_cloud2{
-            border: 2px solid;
+            background-color: rgba(209, 185, 111, 0.808);
+            border: 2px solid  rgb(255, 255, 0);
             text-align: left;
             justify-self: center;
             width: 50vw;
