--- a/Apparato_Digerente/principale.html
+++ b/Apparato_Digerente/principale.html
@@ -16,6 +16,16 @@
             background-size: cover;
         }
 
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
+
         #containerPri {
             display: flex;
             flex-direction: column;
